--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,7 +51,7 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   assets:
-    - assets/coração.riv
+    - assets/coracao.riv
     - assets/engremagens.riv
 
   # An image asset can refer to one or more resolution-specific "variants", see
